--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			margin: 0px 0px 0px 0px;
 			padding: 0px 0px 0px 0px;
 
-			background-color: white;
+			background-color: gray;
 		}
 
 		canvas {
